# rag_agent

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  config.py  docker-compose.yml  main.py  pyproject.toml
rag/: chain.py  tools.py  vectorstore.py
rag_agent/data/chroma/: chroma.sqlite3
scripts/: ingest.py  sync.py
sharepoint/: client.py  loader.py
